# uv_git_deps_bug_root

./: hello.py  pyproject.toml
